<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:theme="@style/Theme.AppCompat.DayNight" android:orientation="vertical" android:tag="layout/eula_layout_chn_0" android:layout_width="fill_parent" android:layout_height="wrap_content" android:textDirection="locale"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearance" android:textSize="14.0sp" android:textColor="?android:textColorPrimary" android:linksClickable="true" android:layout_gravity="start" android:id="@id/eula_description" android:background="@drawable/link_text_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:lineHeight="21.0sp" />
    <TextView android:textAppearance="?android:textAppearance" android:textSize="16.0sp" android:textColor="?android:textColorPrimary" android:layout_gravity="start" android:id="@id/service_provider_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0sp" android:text="@string/use_current_location_body_search_provider" android:fontFamily="@string/font_roboto_medium" />
    <TextView android:textAppearance="?android:textAppearance" android:textSize="13.0sp" android:textColor="?android:textColorPrimary" android:layout_gravity="start" android:id="@id/service_provider_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="华风爱科气象科技（北京）有限公司" />
    <TextView android:textAppearance="?android:textAppearance" android:textSize="16.0sp" android:textColor="?android:textColorPrimary" android:layout_gravity="start" android:id="@id/data_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0sp" android:text="@string/use_current_location_body_data_required_permission" android:fontFamily="@string/font_roboto_medium" />
    <TextView android:textAppearance="?android:textAppearance" android:textSize="13.0sp" android:textColor="?android:textColorPrimary" android:layout_gravity="start" android:id="@id/data_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/use_current_location_body_location" />
    <TextView android:textAppearance="?android:textAppearance" android:textSize="16.0sp" android:textColor="?android:textColorPrimary" android:layout_gravity="start" android:id="@id/purpose_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0sp" android:text="@string/use_current_location_body_purpose" android:fontFamily="@string/font_roboto_medium" />
    <TextView android:textAppearance="?android:textAppearance" android:textSize="13.0sp" android:textColor="?android:textColorPrimary" android:layout_gravity="start" android:id="@id/purpose_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/use_current_location_body_purpose_content" android:fontFamily="@string/font_roboto_regular" />
</LinearLayout>