<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:tag="layout/news_agreement_dialog_0" android:background="@color/col_widget_dialog_background" android:paddingTop="@dimen/widget_news_dialog_padding_top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingHorizontal="@dimen/widget_news_dialog_padding"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/widget_news_dialog_text_title" android:textStyle="bold" android:textColor="@color/col_widget_dialog_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/news_opt_in_popup_title_text" android:contentDescription="@string/news_opt_in_popup_title_text" android:fontFamily="@string/font_roboto_medium" android:textAlignment="viewStart" />
    <TextView android:textSize="@dimen/widget_news_dialog_text_contents" android:textColor="@color/col_widget_dialog_contents" android:id="@id/news_opt_in_popup_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/widget_news_dialog_margin_title" android:text="@string/news_opt_in_popup_desc_text" android:fontFamily="@string/font_roboto_regular" />
    <include android:id="@id/widget_preview_area" layout="@layout/picker_weather_news" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/widget_news_dialog_text_confirm" android:textStyle="bold" android:textColor="@color/col_widget_dialog_confirm_button" android:id="@id/disagree" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/not_now_btn" android:layout_weight="0.5" android:contentDescription="@string/not_now_btn" android:fontFamily="@string/font_roboto_medium" android:textAlignment="center" />
        <FrameLayout android:id="@id/widget_divider" android:background="#ffe6e6e6" android:layout_width="1.0dip" android:layout_height="16.0dip" />
        <TextView android:textSize="@dimen/widget_news_dialog_text_confirm" android:textStyle="bold" android:textColor="@color/col_widget_dialog_confirm_button" android:id="@id/agree" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/try_it_out_btn" android:layout_weight="0.5" android:contentDescription="@string/try_it_out_btn" android:fontFamily="@string/font_roboto_medium" android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>