<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/update_tips_card" android:tag="layout/update_tip_card_0" android:background="@color/update_tip_card_bg" android:paddingTop="19.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.samsung.android.weather.app.common.view.SizeLimitedTextView android:textSize="15.0sp" android:textColor="@color/update_tip_card_body_text_color" android:id="@id/update_tip_card_msg" android:tag="binding_1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:lineSpacingExtra="4.0dip" android:fontFamily="@string/font_roboto_regular" android:layout_marginHorizontal="24.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:textSizeLimit="large" />
    <com.samsung.android.weather.app.common.view.SizeLimitedTextView android:textSize="15.0sp" android:textColor="@color/update_tip_card_update_button_text_color" android:gravity="center_vertical" android:id="@id/update_tip_card_update_button" android:tag="binding_2" android:background="@drawable/update_tip_card_button_ripple" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:minHeight="32.0dip" android:text="@string/update_abb8" android:fontFamily="@string/font_roboto_medium" android:layout_marginEnd="8.0dip" android:paddingHorizontal="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/update_tip_card_msg" app:textSizeLimit="large" />
    <com.samsung.android.weather.app.common.view.SizeLimitedTextView android:textSize="15.0sp" android:textColor="@color/update_tip_card_update_button_text_color" android:gravity="center_vertical" android:id="@id/update_tip_card_not_now_button" android:tag="binding_3" android:background="@drawable/update_tip_card_button_ripple" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="32.0dip" android:text="@string/not_now" android:fontFamily="@string/font_roboto_medium" android:layout_marginEnd="4.0dip" android:paddingHorizontal="16.0dip" app:layout_constraintBottom_toBottomOf="@id/update_tip_card_update_button" app:layout_constraintEnd_toStartOf="@id/update_tip_card_update_button" app:layout_constraintTop_toTopOf="@id/update_tip_card_update_button" app:textSizeLimit="large" />
</androidx.constraintlayout.widget.ConstraintLayout>