<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/how_to_use_scroll" android:tag="layout/how_to_use_app_0" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingTop="@dimen/how_to_use_next_object_margin" android:paddingBottom="@dimen/how_to_use_next_object_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/how_to_use_start_end_margin" android:layout_marginEnd="@dimen/how_to_use_start_end_margin">
        <TextView android:textSize="@dimen/how_to_use_desc_text_size" android:textColor="@color/how_to_use_text_color" android:id="@id/how_to_use_app_desc1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/how_to_use_text_image_margin" android:text="@string/how_to_tap_menu" android:lineSpacingExtra="4.0sp" android:fontFamily="@string/font_roboto_regular" />
        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/howtouse_app01" android:scaleType="fitCenter" android:adjustViewBounds="true" />
        <TextView android:textSize="@dimen/how_to_use_desc_text_size" android:textColor="@color/how_to_use_text_color" android:id="@id/how_to_use_app_desc2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/how_to_use_next_object_margin" android:layout_marginBottom="@dimen/how_to_use_text_image_margin" android:text="@string/how_to_tap_manage_locations" android:lineSpacingExtra="4.0sp" android:fontFamily="@string/font_roboto_regular" />
        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/howtouse_app02" android:scaleType="fitCenter" android:adjustViewBounds="true" />
        <TextView android:textSize="@dimen/how_to_use_desc_text_size" android:textColor="@color/how_to_use_text_color" android:id="@id/how_to_use_app_desc3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/how_to_use_next_object_margin" android:layout_marginBottom="@dimen/how_to_use_text_image_margin" android:text="@string/how_to_add_delete_set_location_as_favorite" android:lineSpacingExtra="4.0sp" android:fontFamily="@string/font_roboto_regular" />
        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/howtouse_app03" android:scaleType="fitCenter" android:adjustViewBounds="true" />
        <TextView android:textSize="@dimen/how_to_use_desc_text_size" android:textColor="@color/how_to_use_text_color" android:id="@id/how_to_use_app_desc4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/how_to_use_next_object_margin" android:layout_marginBottom="@dimen/how_to_use_text_image_margin" android:text="@string/how_to_favorite_location_used_in_location" android:lineSpacingExtra="4.0sp" android:fontFamily="@string/font_roboto_regular" />
        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/howtouse_app04" android:scaleType="fitCenter" android:adjustViewBounds="true" />
        <ImageView android:id="@id/how_to_use_app_favorite" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/howtouse_app05" android:scaleType="fitCenter" android:adjustViewBounds="true" />
    </LinearLayout>
</ScrollView>