<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:gravity="center_horizontal" android:id="@id/news_oobe_area" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:background="@drawable/news_bubble" android:layout_width="fill_parent" android:layout_height="fill_parent" android:backgroundTint="@color/col_75_FCFCFC" />
    <RelativeLayout android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/news_start_btn" android:paddingTop="@dimen/widget_news_bubble_text_marginTop" android:paddingBottom="@dimen/widget_news_bubble_text_marginBottom" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/ic_news_cancel" android:layout_width="@dimen/widget_news_bubble_cancel_icon_size" android:layout_height="@dimen/widget_news_bubble_cancel_icon_size" android:src="@drawable/ic_bubble_cancel" android:tint="@color/col_252525" android:layout_alignParentTop="true" android:layout_marginEnd="@dimen/widget_news_bubble_cancel_marginEnd" android:layout_alignParentEnd="true" />
        <TextView android:textSize="@dimen/widget_news_bubble_text_size" android:textColor="@color/col_252525" android:ellipsize="end" android:id="@id/news_bubble_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/news_widget_bubble_text" android:maxLines="3" android:paddingStart="@dimen/widget_news_bubble_text_marginStart" android:layout_marginEnd="@dimen/widget_news_bubble_text_marginEnd" android:layout_alignParentStart="true" />
        <TextView android:textSize="@dimen/widget_news_bubble_text_size" android:textColor="@color/col_252525" android:ellipsize="end" android:paddingTop="@dimen/widget_news_bubble_try_it_out_marginTop" android:paddingBottom="@dimen/widget_news_bubble_try_it_out_marginHorizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/try_it_out_btn" android:maxLines="1" android:layout_below="@id/news_bubble_text" android:fontFamily="@string/font_roboto_medium" android:layout_marginEnd="@dimen/widget_news_bubble_try_it_out_marginEnd" android:layout_alignParentEnd="true" android:paddingHorizontal="@dimen/widget_news_bubble_try_it_out_marginHorizontal" />
    </RelativeLayout>
    <Button android:layout_gravity="end|center|top" android:id="@id/news_cancel_btn" android:background="@android:color/transparent" android:layout_width="@dimen/widget_news_bubble_cancel_touch_size" android:layout_height="@dimen/widget_news_bubble_cancel_touch_size" android:layout_marginTop="@dimen/widget_news_bubble_cancel_touch_marginTop" android:contentDescription="@string/close" android:layout_marginEnd="@dimen/widget_news_bubble_cancel_touch_marginEnd" />
</FrameLayout>