<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/edge_panel_setting_layout_0" android:background="@drawable/edge_panel_bg" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/edge_panel_setting_desc_text_size" android:textColor="@color/col_edge_temp" android:gravity="center" android:id="@id/edge_panel_error_text" android:tag="binding_1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:fontFamily="@string/font_roboto_regular" android:layout_marginStart="@dimen/edge_panel_setting_desc_side_margin" android:layout_marginEnd="@dimen/edge_panel_setting_desc_side_margin" app:layout_constraintBottom_toTopOf="@id/edge_setting_button" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed" />
    <Button android:textSize="@dimen/edge_panel_setting_button_text_size" android:textColor="@color/col_edge_temp" android:id="@id/edge_setting_button" android:tag="binding_2" android:background="@drawable/edge_panel_setting_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/edge_panel_setting_button_margin_top" android:minWidth="@dimen/edge_panel_setting_button_width" android:minHeight="@dimen/edge_panel_setting_button_height" android:text="@string/widget_setting" android:textAllCaps="false" android:fontFamily="@string/font_roboto_medium" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/edge_panel_error_text" />
</androidx.constraintlayout.widget.ConstraintLayout>