<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/select_all_layout" android:tag="layout/locations_select_all_0" android:layout_width="wrap_content" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/select_all_checkbox_layout" android:tag="binding_1" android:background="@drawable/locations_select_all_bg" android:paddingTop="@dimen/actionbar_select_all_padding_top" android:focusable="true" android:clickable="true" android:layout_width="68.0dip" android:layout_height="fill_parent" android:layout_centerVertical="true">
        <CheckBox android:id="@id/select_all_checkbox" android:tag="binding_2" android:focusable="false" android:clickable="false" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
        <TextView android:textSize="12.0dip" android:textStyle="normal" android:textColor="@color/col_def_select_all_text_color" android:ellipsize="end" android:gravity="center" android:id="@id/select_all_selected_text" android:focusable="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/actionbar_select_all_top_margin" android:text="@string/map_all" android:singleLine="true" android:layout_below="@id/select_all_checkbox" android:layout_centerHorizontal="true" android:fontFamily="@string/font_roboto_regular" />
    </RelativeLayout>
    <com.samsung.android.weather.app.common.view.SizeLimitedTextView android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" android:textSize="19.0sp" android:textColor="@color/col_def_select_all_text_color" android:ellipsize="end" android:id="@id/select_all_selected_count" android:tag="binding_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select_locations" android:singleLine="true" android:layout_centerVertical="true" android:layout_marginEnd="8.0dip" android:layout_toEndOf="@id/select_all_checkbox_layout" limit:textSizeLimit="large" xmlns:limit="http://schemas.android.com/apk/res-auto" />
</RelativeLayout>